# rail_grasp_calculation

./: README.md
rail_grasp_calculation/: CMakeLists.txt  package.xml
rail_grasp_calculation_msgs/: CMakeLists.txt  README.md  package.xml
rail_grasp_calculation_msgs/action/: RankGrasps.action  SampleGrasps.action
rail_grasp_calculation_msgs/msg/: Heuristics.msg  Workspace.msg
rail_grasp_calculation_nodes/: .gitignore  CMakeLists.txt  README.md  package.xml
rail_grasp_calculation_nodes/include/rail_grasp_calculation_nodes/: GraspSampler.h  PoseWithHeuristic.h
rail_grasp_calculation_nodes/launch/: find_grasps.launch
rail_grasp_calculation_nodes/src/: GraspSampler.cpp  PoseWithHeuristic.cpp
